@@ -4,12 +4,13 @@
 
 pkgname=acerhk
 pkgver=0.5.35
-pkgrel=15
+pkgrel=16
 pkgdesc="Acer hotkey driver"
 url="http://www.cakey.de/acerhk/"
 arch=('i686') # Unavailable for x86_64
 license=('GPL')
-depends=('kernel26>=2.6.31' 'kernel26<2.6.32')
+depends=('kernel26>=2.6.32' 'kernel26<2.6.33')
+makedepends=('kernel26-headers>=2.6.32' 'kernel26-headers<2.6.33')
 source=(http://www.cakey.de/acerhk/archives/${pkgname}-${pkgver}.tgz acerhk.rc
         2.6.30.patch)
 install=acerhk.install
